Closed Bug 1839314 Opened 1 year ago Closed 11 months ago

async RemoteTexture + accelerated Canvas on Linux: Tab crash with multiple windows

Categories

(Core :: Graphics, defect)

Unspecified
Linux
defect

Tracking

()

VERIFIED FIXED
116 Branch
Tracking Status
firefox116 --- verified

People

(Reporter: sotaro, Assigned: sotaro)

References

(Blocks 2 open bugs)

Details

(Whiteboard: [sp3])

Attachments

(2 files)

Similar to Bug 1831548, but with multiple windows

  • [1] Launch Firefox
  • [2] Access this test page
  • [3] Select 2000 fish
  • [4]Open a new window
  • [5] Access this test page
  • [6] Select 2000 fish

If the crash does not happen continue [4] - [6].

Assignee: nobody → sotaro.ikeda.g
Attached patch patch - Add logSplinter Review

When the problem happened, a lot of Cmds messages were sent by WebGLChild::FlushPendingCmds() without calling ClientWebGLContext::GetFrontBuffer(). Then the fix of Bug 1831548 did not work.

OS: Unspecified → Linux
Attachment #9340046 - Attachment description: WIP: Bug 1839314 - Force sync IPC if there are many flushed cmds without calling ClientWebGLContext::GetFrontBuffer() → Bug 1839314 - Force sync IPC if there are many flushed cmds without calling ClientWebGLContext::GetFrontBuffer()
Whiteboard: [sp3]
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f4439502096e
Force sync IPC if there are many flushed cmds without calling ClientWebGLContext::GetFrontBuffer() r=ipc-reviewers,nika,gfx-reviewers,lsalzman
Blocks: 1835275
Status: NEW → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch

I've reproduced this issue using Nightly Nightly 116.0a1(2023-06-20) following the STR from Comment 0 on Ubuntu 22.04.
Verified as fixed on the latest Nightly 117.0a1 and Firefox 116.0 versions under same configuration where the issue no longer persists.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: