dom/canvas/ClientWebGLContext.cpp
@@ -541,14 +541,23 @@ Maybe<layers::SurfaceDescriptor> ClientWebGLContext::GetFrontBuffer(
   const auto& textureId = fb ? fb->mLastRemoteTextureId : mLastRemoteTextureId;
   auto& needsSync = fb ? fb->mNeedsRemoteTextureSync : mNeedsRemoteTextureSync;
   if (ownerId && textureId) {
-    const auto tooManyFlushes = 10;
-    auto info = child->GetFlushedCmdInfo();
-    // If there are many Flushed Cmds, force synchronous IPC to avoid too many
-    // pending ipc messages.
-    if ((info.flushes - mLastFlushes) > tooManyFlushes) {
-      needsSync = true;
+    auto& info = child->GetFlushedCmdInfo();
+    if (!gfx::gfxVars::WebglOopAsyncPresentForceSync() &&
+        info.flushesSinceLastCongestionCheck.isNothing()) {
+      // Enabling checking of increase of flush cmds.
+      info.flushesSinceLastCongestionCheck = Some(0);
     }
-    mLastFlushes = info.flushes;
+    const auto tooManyFlushes = 10;
+    if (info.flushesSinceLastCongestionCheck.isSome()) {
+      // If there are many flushed cmds, force synchronous IPC to avoid too many
+      // pending ipc messages.
+      if (info.flushesSinceLastCongestionCheck.ref() > tooManyFlushes) {
+        needsSync = true;
+      }
+      // Reset flushesSinceLastCongestionCheck
+      info.flushesSinceLastCongestionCheck = Some(0);
+      info.congestionCheckGeneration++;
+    }
     if (XRE_IsParentProcess() ||
         gfx::gfxVars::WebglOopAsyncPresentForceSync() || needsSync) {
       needsSync = false;
